secondfile/objects/DHStatus_Provisioning_Billing_Details__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Provisioning Billing Details</description>
    <fields>
        <fullName>Competitive_Discount_Effective_Date__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Provisioning Billing Details-Competitive Discount Effective Date</description>
        <label>Competitive Discount Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatusUpdateDealHashDetailsID__c</fullName>
        <formula>DHStatus_Billing_Update_Details__r.DHStatus_Update_IDH__r.DHStatus_Update_Deal_Hash_Details__r.Id</formula>
        <label>DHStatusUpdateDealHashDetailsID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatusUpdateDealHashPremiseNumber__c</fullName>
        <formula>DHStatus_Billing_Update_Details__r.DHStatus_Update_IDH__r.DHStatus_Update_Deal_Hash_Details__r.RDS_Premise_Details_For_DHStatus__r.Premise_Number__c</formula>
        <label>DHStatusUpdateDealHashPremiseNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Billing_Update_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Provisioning Billing Details-DHStatus-Billing Update Details</description>
        <label>DHStatus-Billing Update Details</label>
        <referenceTo>DHStatus_Billing_Update_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Provisioning Billing Details</relationshipLabel>
        <relationshipName>DHStatus_Provisioning_Billing_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_IDH_Data_Type__c</fullName>
        <formula>DHStatus_Billing_Update_Details__r.DHStatus_Update_IDH__r.Data_Type__c</formula>
        <label>DHStatus IDH Data Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Provisioning Billing Details-Effective Date</description>
        <label>Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Provisioning Billing Details</label>
    <nameField>
        <displayFormat>PBD-{0000}</displayFormat>
        <label>DHStatus-Provisioning Billing Details Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Provisioning Billing Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>